--- a/unlimitedColors/index.html
+++ b/unlimitedColors/index.html
@@ -11,7 +11,7 @@
     <h1>Start should change the Background color every second</h1>
     <button id="start">Start</button>
     <button id="stop">Stop</button>
-    <!-- <script src="script2.js"></script> -->
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
+    
   </body>
 </html>
